added html for first block: header and hello section

--- a/index.html
+++ b/index.html
@@ -1,11 +1,72 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Беспроводные наушники Beats Solo 3</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@300;400;700&family=Play:wght@400;700&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="./css/normalize.css" />
+  <link rel="stylesheet" href="./css/main.css" />
+
 </head>
+
 <body>
-  
+  <div class="wrapper">
+    <div class="wrapper__content">
+      <header>
+        <div class="container">
+          <div class="logo">
+            <a href="#" class="logo_link" alt="logo">
+              <img src="./img/logo.png" alt="" class="logo__img">
+            </a>
+          </div>
+          <nav class="menu">
+            <ul class="menu__list">
+              <li class="menu__item"><a href="" class="menu__link">О нас</a></li>
+              <li class="menu__item"><a href="" class="menu__link">Наушники</a></li>
+              <li class="menu__item"><a href="" class="menu__link">Команда</a></li>
+              <li class="menu__item"><a href="" class="menu__link">Цвета</a></li>
+              <li class="menu__item"><a href="" class="menu__link">Отзывы</a></li>
+              <li class="menu__item"><a href="" class="menu__link">Как мы работаем</a></li>
+              <li class="menu__item"><a href="" class="menu__link">Контакты</a></li>
+            </ul>
+          </nav>
+          <div class="phone">
+            <a href="tel:8 800 903 90 90" class="phone">8 800 903 90 90</a>
+          </div>
+        </div>
+      </header>
+      <main class="main--content">
+        <section class="hello">
+          <div class="container">
+            <h1 class="hello_title">Беспроводные наушники beats solo 3</h1>
+            <div class="hello__text">Встречайте новую версию наушников из линейки Powerbeats</div>
+            <a href="" class="button">Заказать</a>
+          </div>
+          <ul class="advantages__list">
+            <li class="advantages__item">
+              <img src="./img/perfect_sound.png" alt="" class="advantages__img">
+              <div class="advantages__text">Безупречный звук</div>
+            </li>
+            <li class="advantages__item">
+              <img src="./img/battery.png" alt="" class="advantages__img">
+              <div class="advantages__text">До 40 часов работы</div>
+            </li>
+            <li class="advantages__item">
+              <img src="./img/technological.png" alt="" class="advantages__img">
+              <div class="advantages__text">Технология Fast Fuel</div>
+            </li>
+          </ul>
+        </section>
+      </main>
+    </div>
+  </div>
+
 </body>
+
 </html>
